--- a/assets/custom.css
+++ b/assets/custom.css
@@ -5,7 +5,7 @@ body {
     line-height: 1.6;
     font-weight: 400;
     font-family: "Open Sans", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
-    color: #566573; 
+    color: #34495E; 
     background-color: #98FB98;
 }
 
